--- a/manual/platform/keymap-c200.tex
+++ b/manual/platform/keymap-c200.tex
@@ -31,25 +31,21 @@
 \newcommand{\ActionWpsSkipPrev}{\ButtonLeft}
 \newcommand{\ActionWpsSeekBack}{Long \ButtonLeft}
 \newcommand{\ActionWpsSeekFwd}{Long \ButtonRight}
-
 \newcommand{\ActionWpsStop}{Long \ButtonUp}
 \newcommand{\ActionWpsVolDown}{\ButtonVolDown}
 \newcommand{\ActionWpsVolUp}{\ButtonVolUp}
-
-\newcommand{\ActionWpsQuickScreen}{Long \ButtonDown}
+\newcommand{\ActionWpsQuickScreen}{\ButtonDown}
 \newcommand{\ActionWpsMenu}{\ButtonPower}
-\newcommand{\ActionWpsContext}{\ButtonDown}
+\newcommand{\ActionWpsContext}{Long \ButtonSelect}
 \newcommand{\ActionWpsBrowse}{\ButtonSelect}
 \newcommand{\ActionWpsPitchScreen}{\ButtonSelect{} + \ButtonUp}
 \newcommand{\ActionWpsIdThreeScreen}{\ButtonSelect{} + \ButtonDown}
-
 \newcommand{\ActionWpsAbSetBNextDir}{\ButtonPower{} + \ButtonRight}
 \newcommand{\ActionWpsAbSetAPrevDir}{\ButtonPower{} + \ButtonLeft}
 \newcommand{\ActionWpsAbReset}{\ButtonPower{} + \ButtonUp}
 
 %Button actions, tree context
-\newcommand{\ActionTreeWps}{\ButtonRec{} + \ButtonUp}
-\newcommand{\ActionTreeStop}{Long \ButtonUp}
+\newcommand{\ActionTreeWps}{Long \ButtonRight}
 \newcommand{\ActionTreeEnter}{\ButtonSelect{} or \ButtonRight}
 \newcommand{\ActionTreeParentDirectory}{\ButtonLeft}
 
@@ -64,14 +60,14 @@
 \newcommand{\ActionKbdLeft}{\ButtonLeft}
 \newcommand{\ActionKbdRight}{\ButtonRight}
 \newcommand{\ActionKbdSelect}{\ButtonSelect}
-\newcommand{\ActionKbdDone}{\ButtonVolUp{}/ \ButtonVolDown}
+\newcommand{\ActionKbdDone}{Long \ButtonSelect}
 \newcommand{\ActionKbdAbort}{\ButtonPower}
 \newcommand{\ActionKbdUp}{\ButtonUp}
 \newcommand{\ActionKbdDown}{\ButtonDown}
-\newcommand{\ActionKbdCursorLeft}{\ButtonRec{} + \ButtonLeft}
-\newcommand{\ActionKbdCursorRight}{\ButtonRec{} + \ButtonRight}
-\newcommand{\ActionKbdBackSpace}{\ButtonRec{} + \ButtonSelect}
-\newcommand{\ActionKbdPageFlip}{\ButtonRec{} + \ButtonVolUp}
+\newcommand{\ActionKbdCursorLeft}{\ButtonVolDown}
+\newcommand{\ActionKbdCursorRight}{\ButtonVolUp}
+\newcommand{\ActionKbdBackSpace}{\ButtonRec}
+\newcommand{\ActionKbdPageFlip}{\ButtonSelect{} + \ButtonLeft{} / \ButtonRight}
 
 %Button actions, Pitch Screen context
 \newcommand{\ActionPsToggleMode}{\ButtonRec}
